--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,7 @@
 server:
   error:
     include-stacktrace: never
+    include-message: always
 spring:
   application:
     name: investigation-service
