--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/store
     username: postgres
-    password: admin
+    password: 1qaz!QAZ
     driver-class-name: org.postgresql.Driver
 
   jpa:
