--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ server:
     include-message: always
 spring:
   application:
-    name: investigation-service
+    name: backend
 
   datasource:
     url: jdbc:postgresql://localhost:5432/store
